# src/Inowas/ModflowCalculation/Infrastructure/Projection/Calculation/CalculationConfigurationFinder.php
@@ -6,6 +6,7 @@ namespace Inowas\ModflowCalculation\Infrastructure\Projection\Calculation;
 
 use Doctrine\DBAL\Connection;
 use Inowas\Common\Id\ModflowId;
+use Inowas\Common\Modflow\StressPeriods;
 use Inowas\ModflowCalculation\Infrastructure\Projection\Table;
 use Inowas\ModflowCalculation\Model\ModflowCalculationConfigurationRequest;
 
@@ -28,6 +29,20 @@ class CalculationConfigurationFinder
         );
 
         return ModflowId::fromString($result['modflow_model_id']);
+    }
+
+    public function getStressPeriodsFromCalculationById(ModflowId $calculationId): ?StressPeriods
+    {
+        $result = $this->connection->fetchAssoc(
+            sprintf('SELECT stress_periods from %s WHERE calculation_id = :calculation_id', Table::CALCULATION_CONFIG),
+            ['calculation_id' => $calculationId->toString()]
+        );
+
+        if ($result === false){
+            return null;
+        }
+
+        return StressPeriods::createFromArray(json_decode($result['stress_periods'], true));
     }
 
     public function getFlopyCalculation(ModflowId $calculationId): ?ModflowCalculationConfigurationRequest
