# src/Inowas/ModflowCalculation/Infrastructure/Projection/Calculation/CalculationListFinder.php
@@ -26,11 +26,17 @@ class CalculationListFinder
         );
     }
 
-    public function findCalculationById(ModflowId $calculationId)
+    public function findCalculationById(ModflowId $calculationId): ?array
     {
-        return $this->connection->fetchAssoc(
-            sprintf('SELECT * from %s WHERE calculation_id = :calculation_id ORDER BY id DESC LIMIT 1', Table::CALCULATION_LIST),
+        $result = $this->connection->fetchAssoc(
+            sprintf('SELECT calculation_id AS id, model_id, soilmodel_id, user_id, state, start_date_time, end_date_time from %s WHERE calculation_id = :calculation_id ORDER BY id DESC LIMIT 1', Table::CALCULATION_LIST),
             ['calculation_id' => $calculationId->toString()]
         );
+
+        if ($result === false) {
+            return null;
+        }
+
+        return $result;
     }
 }
